--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,7 +7,7 @@ jobs:
   integration-test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-2025]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     environment: ci
 
@@ -24,7 +24,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install Poetry (Linux/macOS)
-        if: matrix.os != 'windows-2025'
+        if: matrix.os != 'windows-latest'
         uses: snok/install-poetry@v1
         with:
           version: 2.2.1
@@ -34,7 +34,7 @@ jobs:
           installer-parallel: true
 
       - name: Install Poetry via pip (Windows)
-        if: matrix.os == 'windows-2025'
+        if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
           # Install Poetry directly via pip to avoid pipx path issues on Windows.
@@ -135,7 +135,7 @@ jobs:
       # Download and install Siril (Windows only)
       #----------------------------------------------
       - name: Download and install Siril (Windows)
-        if: matrix.os == 'windows-2025'
+        if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
           # Download Siril installer
@@ -192,7 +192,7 @@ jobs:
       # Install crane for container image extraction (Windows only)
       #----------------------------------------------
       - name: Install crane (Windows)
-        if: matrix.os == 'windows-2025'
+        if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
           # Install crane for Windows
@@ -249,7 +249,7 @@ jobs:
       # Extract test-data using crane (Windows)
       #----------------------------------------------
       - name: Extract test-data using crane (Windows)
-        if: matrix.os == 'windows-2025'
+        if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
           Write-Host "::group::Export container image to tarball using crane"
@@ -262,11 +262,11 @@ jobs:
           Write-Host "::endgroup::"
 
       - name: Show free disk space (Linux/macOS)
-        if: matrix.os != 'windows-2025'
+        if: matrix.os != 'windows-latest'
         run: df -h
 
       - name: Show free disk space (Windows)
-        if: matrix.os == 'windows-2025'
+        if: matrix.os == 'windows-latest'
         shell: pwsh
         run: Get-PSDrive -PSProvider FileSystem | Select-Object Name, Used, Free, @{Name="UsedGB";Expression={[math]::Round($_.Used/1GB,2)}}, @{Name="FreeGB";Expression={[math]::Round($_.Free/1GB,2)}}
 
@@ -288,7 +288,7 @@ jobs:
         run: poetry run pytest -m integration -n 0 -v --junit-xml=pytest-results.xml
 
       - name: Run integration tests (Windows)
-        if: matrix.os == 'windows-2025'
+        if: matrix.os == 'windows-latest'
         shell: pwsh
         env:
           SENTRY_ENVIRONMENT: ci
@@ -300,7 +300,7 @@ jobs:
       # Post integration test log to job summary
       #----------------------------------------------
       - name: Post integration test log to job summary (Linux/macOS)
-        if: always() && matrix.os != 'windows-2025'
+        if: always() && matrix.os != 'windows-latest'
         run: |
           if [ -f /tmp/process-auto.log ]; then
             echo "## Integration Test Log - ${{ matrix.os }}" >> $GITHUB_STEP_SUMMARY
@@ -314,7 +314,7 @@ jobs:
           fi
 
       - name: Post integration test log to job summary (Windows)
-        if: always() && matrix.os == 'windows-2025'
+        if: always() && matrix.os == 'windows-latest'
         shell: pwsh
         run: |
           $logPath = "$env:TEMP\process-auto.log"
@@ -333,21 +333,21 @@ jobs:
       # Upload integration test logs
       #----------------------------------------------
       - name: Upload integration test logs (Linux/macOS)
-        if: always() && matrix.os != 'windows-2025'
+        if: always() && matrix.os != 'windows-latest'
         uses: actions/upload-artifact@v4
         with:
           name: integration-logs-${{ matrix.os }}
           path: |
-            /tmp/sb-integration-log.txt
+            /tmp/sb-integration.log
             /tmp/process-auto.log
           if-no-files-found: warn
 
       - name: Upload integration test logs (Windows)
-        if: always() && matrix.os == 'windows-2025'
+        if: always() && matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v4
         with:
           name: integration-logs-${{ matrix.os }}
           path: |
-            ${{ runner.temp }}\sb-integration-log.txt
-            ${{ runner.temp }}\process-auto.log
+            ${{ env.TEMP }}\sb-integration.log
+            ${{ env.TEMP }}\process-auto.log
           if-no-files-found: warn
